Fixed team layout issue

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,3 +1,4 @@
 html * {
-    font-family: 'Courier New', Courier, monospace
+    font-family: sans-serif
 }
+
